tests/language_modules/01_core/valid/minimal_module.vf
module CoreMinimal

procedure main()
is
    check true
end main

end CoreMinimal
