tests/language_modules/01_core/invalid_syntax/missing_module_right_name.vf
module MissingEnd

procedure main()
is
    check true
end main

end MissingEnde
